--- a/deno.json
+++ b/deno.json
@@ -1,6 +1,7 @@
 {
   "tasks": {
-    "build": "deno --watch -A compile.ts",
+    "dev": "deno -A compile.ts --dev",
+    "build": "deno -A compile.ts",
     "build-icons": "deno -A buildFluentIcons.ts"
   },
   "imports": {
@@ -9,6 +10,7 @@
     "@sass-fairy/list": "npm:@sass-fairy/list@^1.2.4",
     "@sass-fairy/string": "npm:@sass-fairy/string@^1.3.1",
     "@sass-fairy/url": "npm:@sass-fairy/url@^1.0.1",
+    "@std/cli": "jsr:@std/cli@^1.0.25",
     "@std/path": "jsr:@std/path@^1.1.3",
     "browserslist": "npm:browserslist@^4.28.1",
     "lightningcss": "npm:lightningcss@^1.30.2",
