--- a/.github/workflows/dev-release.yml
+++ b/.github/workflows/dev-release.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Setup Deno
         uses: denoland/setup-deno@v2
         with:
-          deno-version: stable
+          deno-version: v2.6.x
         
       - name: Build themes
         run: deno run build
