--- a/.github/workflows/dev-release.yml
+++ b/.github/workflows/dev-release.yml
@@ -31,7 +31,7 @@ jobs:
       - name: Create release
         uses: softprops/action-gh-release@v2
         with:
-          tag_name: dev-${{ steps.date.outputs.date }}
+          tag_name: dev-${{ steps.date.outputs.date }}-${{ github.run_number }}
           prerelease: true
           generate_release_notes: true
           files: ./dist/*
